--- a/ToothFairy/en.lproj/MainStoryboard.storyboard
+++ b/ToothFairy/en.lproj/MainStoryboard.storyboard
@@ -1,23 +1,137 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2519" systemVersion="12A206j" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="3vP-Hd-UgM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1856"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--Gender View Controller-->
         <scene sceneID="5">
             <objects>
-                <viewController id="2" customClass="TFViewController" sceneMemberID="viewController">
+                <viewController id="2" customClass="TFGenderViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="J9p-Gt-QeD">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="97" id="Unh-H0-clB"/>
+                                </constraints>
+                                <attributedString key="attributedText">
+                                    <fragment content="Select Your Gender">
+                                        <attributes>
+                                            <color key="NSColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <font key="NSFont" size="36" name="Didot"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="truncatingTail" baseWritingDirection="natural"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                                <color key="shadowColor" red="0.37647062539999998" green="0.37647062539999998" blue="0.37647062539999998" alpha="1" colorSpace="deviceRGB"/>
+                            </label>
+                            <containerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oXq-V0-rxj">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <connections>
+                                    <segue destination="F8p-lG-7M5" kind="embed" id="aJB-Iw-DZf"/>
+                                </connections>
+                            </containerView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="oXq-V0-rxj" firstAttribute="top" secondItem="J9p-Gt-QeD" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="1j5-d3-Gbi"/>
+                            <constraint firstItem="J9p-Gt-QeD" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="A98-xT-Rer"/>
+                            <constraint firstItem="J9p-Gt-QeD" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" type="default" id="EWW-eA-48w"/>
+                            <constraint firstAttribute="trailing" secondItem="J9p-Gt-QeD" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="Gev-wy-IIf"/>
+                            <constraint firstAttribute="trailing" secondItem="oXq-V0-rxj" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="p9e-6q-8cM"/>
+                            <constraint firstAttribute="bottom" secondItem="oXq-V0-rxj" secondAttribute="bottom" constant="133" id="q6Y-q9-9ip"/>
+                            <constraint firstItem="oXq-V0-rxj" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="q9K-nF-ecO"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="0Y5-3u-krD"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="594" y="112"/>
+        </scene>
+        <!--Gender Table View Controller-->
+        <scene sceneID="Zzs-LI-bx5">
+            <objects>
+                <tableViewController id="F8p-lG-7M5" customClass="TFGenderTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="grouped" separatorStyle="singleLineEtched" rowHeight="63" sectionHeaderHeight="10" sectionFooterHeight="10" id="Pqu-Ec-rIy">
+                        <rect key="frame" x="0.0" y="0.0" width="280" height="246"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.2337893372" green="0.97448979589999996" blue="0.58498770749999995" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" accessoryType="checkmark" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="8en-k0-SeF" imageView="l2R-Lp-snZ" style="IBUITableViewCellStyleDefault" id="UF4-9F-khl">
+                                <rect key="frame" x="0.0" y="46" width="280" height="65"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="10" y="1" width="240" height="62"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8en-k0-SeF">
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </label>
+                                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="plane.png" id="l2R-Lp-snZ">
+                                            <rect key="frame" x="8" y="8" width="98" height="46"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </imageView>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="F8p-lG-7M5" id="yxS-3s-lhF"/>
+                            <outlet property="delegate" destination="F8p-lG-7M5" id="kdy-Cj-6we"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7OW-Ht-XRa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1003" y="181"/>
+        </scene>
+        <!--Navigation Controller - Tooth Fairy-->
+        <scene sceneID="ZdN-69-82M">
+            <objects>
+                <navigationController title="Tooth Fairy" id="3vP-Hd-UgM" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="wTx-HY-LmI">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="2" kind="relationship" relationship="rootViewController" id="ujj-zh-0Mf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nfT-3O-rRb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="155" y="112"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="plane.png" width="98" height="46"/>
+    </resources>
+    <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="TFBaseTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TFBaseTableViewController.h"/>
+        </class>
+        <class className="TFBaseViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TFBaseViewController.h"/>
+        </class>
+        <class className="TFGenderTableViewController" superclassName="TFBaseTableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TFGenderTableViewController.h"/>
+        </class>
+        <class className="TFGenderViewController" superclassName="TFBaseViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TFGenderViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
