--- a/ToothFairy/en.lproj/MainStoryboard.storyboard
+++ b/ToothFairy/en.lproj/MainStoryboard.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="83" y="468" width="155" height="45"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Button" image="startButtonNormal.png" backgroundImage="startButtonNormal.png">
+                                <state key="normal" title="Button" image="buttonStart.png" backgroundImage="buttonStart.png">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -55,14 +55,6 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
-                            <containerView contentMode="scaleToFill" id="oXq-V0-rxj">
-                                <rect key="frame" x="20" y="125" width="280" height="212"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <connections>
-                                    <segue destination="21c-U7-Mf5" kind="embed" id="gmQ-AJ-krs"/>
-                                </connections>
-                            </containerView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="jN6-4V-duT">
                                 <rect key="frame" x="20" y="30" width="280" height="78"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -70,6 +62,15 @@
                                 <color key="textColor" red="0.31764706969261169" green="0.37647062540054321" blue="0.60000002384185791" alpha="1" colorSpace="deviceRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Xkw-fq-oWx">
+                                <rect key="frame" x="20" y="150" width="280" height="252"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="2" id="OxB-V7-z3R"/>
+                                    <outlet property="delegate" destination="2" id="Syr-3B-h6r"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -78,41 +79,14 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="mainTitle" destination="jN6-4V-duT" id="7x1-V1-GIX"/>
+                        <outlet property="table" destination="Xkw-fq-oWx" id="16Y-Ut-mM9"/>
+                        <outlet property="view" destination="Xkw-fq-oWx" id="14s-bT-3EL"/>
                         <segue destination="peP-mr-m4r" kind="push" identifier="educationViewController" id="ruG-bH-eV4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="356" y="-351"/>
-        </scene>
-        <!--Gender Table View Controller-->
-        <scene sceneID="TKO-4J-rjm">
-            <objects>
-                <tableViewController id="21c-U7-Mf5" customClass="TFGenderTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="1mx-xo-tgg">
-                        <rect key="frame" x="0.0" y="0.0" width="280" height="212"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="qdA-ZI-5IB" customClass="TFCell">
-                                <rect key="frame" x="0.0" y="22" width="280" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="280" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                </view>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="21c-U7-Mf5" id="aM9-pP-TnL"/>
-                            <outlet property="delegate" destination="21c-U7-Mf5" id="fJd-HI-KYw"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="orX-cp-rrd" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="785" y="-534"/>
         </scene>
         <!--Education View Controller - EDUCATION-->
         <scene sceneID="Mlo-AI-bRF">
@@ -227,19 +201,59 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="aJs-WA-bp8" kind="relationship" relationship="rootViewController" id="I8N-aO-Q54"/>
+                        <segue destination="jFc-5b-bi7" kind="relationship" relationship="rootViewController" id="XyY-wK-zI3"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nfT-3O-rRb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-582" y="-345"/>
+            <point key="canvasLocation" x="-931" y="-345"/>
+        </scene>
+        <!--Disclaimer View Controller-->
+        <scene sceneID="86n-8i-ifs">
+            <objects>
+                <viewController id="jFc-5b-bi7" customClass="TFDisclaimerViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="NBT-1V-FaW">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="disclaimerBackgroundpng.png" id="3ea-9l-X27">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="z8U-SP-u20">
+                                <rect key="frame" x="83" y="467.5" width="155" height="46"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Button" image="buttonNext.png" backgroundImage="buttonNext.png">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="aJs-WA-bp8" kind="push" id="me8-yJ-62I"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="qKh-ko-Zvn"/>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackOpaque"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hzc-iY-ZNU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-534" y="-345"/>
         </scene>
     </scenes>
     <resources>
         <image name="backgroundInterior.png" width="320" height="396"/>
+        <image name="buttonNext.png" width="156" height="45"/>
+        <image name="buttonStart.png" width="155" height="45"/>
+        <image name="disclaimerBackgroundpng.png" width="320" height="480"/>
         <image name="downArrow.png" width="33" height="30"/>
-        <image name="startButtonNormal.png" width="155" height="45"/>
-        <image name="startButtonPressed.png" width="155" height="45"/>
+        <image name="startButtonPressed.png" width="16" height="16"/>
         <image name="startViewBackgroundComposed.png" width="320" height="568"/>
     </resources>
     <classes>
@@ -250,25 +264,20 @@
                 <relationship kind="outlet" name="dialView" candidateClass="TRSDialScrollView"/>
             </relationships>
         </class>
-        <class className="TFBaseTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TFBaseTableViewController.h"/>
-        </class>
         <class className="TFBaseViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/TFBaseViewController.h"/>
         </class>
-        <class className="TFCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TFCell.h"/>
+        <class className="TFDisclaimerViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TFDisclaimerViewController.h"/>
         </class>
         <class className="TFEducationViewController" superclassName="TFBaseViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/TFEducationViewController.h"/>
-        </class>
-        <class className="TFGenderTableViewController" superclassName="TFBaseTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TFGenderTableViewController.h"/>
         </class>
         <class className="TFGenderViewController" superclassName="TFBaseViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/TFGenderViewController.h"/>
             <relationships>
                 <relationship kind="outlet" name="mainTitle" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="table" candidateClass="UITableView"/>
             </relationships>
         </class>
         <class className="TFStartViewController" superclassName="TFBaseViewController">
