--- a/ToothFairy/TFCell.xib
+++ b/ToothFairy/TFCell.xib
@@ -34,7 +34,7 @@
 			</object>
 			<object class="IBUITableViewCell" id="578420679">
 				<reference key="NSNextResponder"/>
-				<int key="NSvFlags">292</int>
+				<int key="NSvFlags">290</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIView" id="378987429">
 						<reference key="NSNextResponder" ref="578420679"/>
@@ -42,12 +42,12 @@
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUIImageView" id="261050609">
 								<reference key="NSNextResponder" ref="378987429"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{264, 39}</string>
 								<reference key="NSSuperview" ref="378987429"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="461473281"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<int key="IBUIContentMode">1</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<object class="NSCustomResource" key="IBUIImage">
@@ -57,9 +57,10 @@
 							</object>
 							<object class="IBUIImageView" id="220110133">
 								<reference key="NSNextResponder" ref="378987429"/>
-								<int key="NSvFlags">257</int>
+								<int key="NSvFlags">275</int>
 								<string key="NSFrame">{{219, 11}, {20, 20}}</string>
 								<reference key="NSSuperview" ref="378987429"/>
+								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<int key="IBUIContentMode">1</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -74,6 +75,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 8}, {196, 34}}</string>
 								<reference key="NSSuperview" ref="378987429"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="220110133"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -108,9 +110,9 @@
 								<int key="NSvFlags">290</int>
 								<string key="NSFrame">{{0, 1}, {264, 4}}</string>
 								<reference key="NSSuperview" ref="378987429"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="709173029"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<int key="IBUIContentMode">1</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<object class="NSCustomResource" key="IBUIImage">
@@ -121,6 +123,7 @@
 						</array>
 						<string key="NSFrameSize">{264, 38}</string>
 						<reference key="NSSuperview" ref="578420679"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="261050609"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -136,6 +139,7 @@
 				</array>
 				<string key="NSFrameSize">{264, 39}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="378987429"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -240,7 +244,37 @@
 			<nil key="sourceID"/>
 			<int key="maxID">34</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">TFCell</string>
+					<string key="superclassName">UITableViewCell</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="dots">UIImageView</string>
+						<string key="image">UIImageView</string>
+						<string key="label">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="dots">
+							<string key="name">dots</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="image">
+							<string key="name">image</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="label">
+							<string key="name">label</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/TFCell.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
