--- a/ToothFairy/en.lproj/MainStoryboard.storyboard
+++ b/ToothFairy/en.lproj/MainStoryboard.storyboard
@@ -1095,6 +1095,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="Utu-Pz-YBa"/>
+        <segue reference="me8-yJ-62I"/>
     </inferredMetricsTieBreakers>
 </document>
